[package]
name = "rusty-fridge"
version = "0.1.0"
authors = ["Simon Rasmussen <zetlon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = { version = "0.2.0", features = ["unsafe-logging"] }
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
pid = { version = "3.0.0", features = ["serde"] }
rustls = { version = "0.19.0" }
webpki-roots = "0.18.0"
enum-utils = "0.1.2"
